# grapl

./: .gitignore  Grapl Provision.ipynb  docker-compose.yml  gen-raw-logs.py
analyzer_executor/: Dockerfile
deployment/: app.py  cdk.context.json  requirements.txt  setup.py
deployment/cdk.out/: graplvpcs-stack.template.json  manifest.json  mastergraphcluster-stack.template.json  sysmon-event-source.template.json  sysmon-subgraph-generator.template.json  tree.json
deployment/grapl_cdk/: dgraph_cluster.py  event_source.py  generic_graph_generator.py  graph_generator.py  grapl_cdk_stack.py  grapl_service.py  grapl_vpc.py  redis_cluster.py  sysmon_events.py  sysmon_graph_generator.py  unidentified_graph_source.py
engagement-creator/: Dockerfile
engagement_ux/engagement_edge/: Dockerfile
engagement_ux/engagement_view/: Dockerfile
generic-subgraph-generator/: Cargo.toml
generic-subgraph-generator/src/: main.rs
graph-generator-lib/: Cargo.toml
graph-merger/: Cargo.toml
grapl-cdk/: deploy_all.sh  index.ts
grapl-cdk-bk/edge_ux_package/: index.js  lens.js  lenses.js
rust/: Dockerfile
rust/analyzer-dispatcher/: Cargo.toml
rust/derive-dynamic-node/: Cargo.toml
rust/generic-subgraph-generator/: Cargo.toml
rust/graph-generator-lib/: Cargo.toml
rust/graph-merger/: Cargo.toml
rust/grapl-config/: Cargo.toml
rust/node-identifier/: Cargo.toml
rust/sysmon-subgraph-generator/: Cargo.toml
sysmon-subgraph-generator/: Cargo.toml
sysmon-subgraph-generator/graph-generator-lib/: Cargo.toml
sysmon-subgraph-generator/src/: main.rs
(+7 files in other folders)
